Fixed spacing issues main tag

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ header {
 }
 
 main {
-  padding-top: 120px;
+  padding-top: 72px;
 }
 
 .container {
@@ -919,7 +919,7 @@ Medium devices (640px and larger)
   }
 
   main {
-    padding-top: 76px;
+    padding-top: 72px;
   }
 
   .col-md-1 {
